# cuda-matmul

./: .envrc  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  main  main.cu  matmul.cu  matmul.h  matmul.py  matrix.cpp  matrix.h  occupancy.txt  runner.h
src/: matmul.cu  matmul.cuh  matmul.h  matrix.cpp  matrix.h  runner.cu  runner.h
